--- a/homehub/website/appclient/src/app/vulnerabilities/vulnerabilities.component.html
+++ b/homehub/website/appclient/src/app/vulnerabilities/vulnerabilities.component.html
@@ -1,1 +1,8 @@
-<div>vulnerabilities works!</div>
+<div class="m-2">
+    <div style="font-size:2.5rem; font-weight:bold;">
+        {{ cve_identifier }}
+    </div>
+    <div style="font-size: 1.35rem;" class="mt-2">
+        {{ cve_description }}
+    </div>
+</div>
